fixed too wide container with a fixed max-width:450px property

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
   border-radius: 15px;
   width: 85%;
+  max-width: 450px;
   text-align: center;
   color: darkgreen;
 }
